--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,5 @@
   "UniqueID": "vabrell.sm_bqms",
   "EntryDll": "Seed Maker - Better quality more seeds.dll",
   "MinimumApiVersion": "3.13.0",
-  "UpdateKeys": []
+  "UpdateKeys": ["Nexus:14236"]
 }
