Add patcher if Automate is installed

--- a/Seed Maker - Better quality more seeds.csproj
+++ b/Seed Maker - Better quality more seeds.csproj
@@ -2,6 +2,9 @@
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
 		<RootNamespace>SM_bqms</RootNamespace>
+		<ModFolderName>Seed Maker - Better quality more seeds</ModFolderName>
+		<IgnoreModFilePaths>Automate.dll</IgnoreModFilePaths>
+		<EnableHarmony>true</EnableHarmony>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.0.2"/>
